# diplom

./: .gitignore  Dockerfile  manage.py  mydatabase  pyproject.toml  test_data.json
app/application/: schemas.py  urls.py
app/application/api/: urls.py
app/application/api/carts/: handlers.py
app/application/api/customers/: handlers.py  schemas.py
app/application/api/orders/: handlers.py  shemas.py
app/application/api/products/: handlers.py  schemas.py  shemas.py
app/application/carts/: handlers.py  shemas.py
app/carts/: admin.py  apps.py  models.py
app/carts/migrations/: 0001_initial.py
app/common/: exceptions.py  models.py
app/customers/: admin.py  apps.py  models.py
app/customers/entities/: customers.py  domain.py  entities.py  services.py  use_case.py
app/customers/execeptions/: customers.py
app/customers/migrations/: 0001_initial.py
app/customers/models/: customers.py
app/customers/repositories/: customers.py
app/customers/services/: auth.py  customers.py
app/orders/: admin.py  models.py
app/products/: admin.py
app/products/exceptions/: products.py
app/products/migrations/: 0001_initial.py
app/products/models/: categories.py  producst.py  reviews.py
app/project/: asgi.py  urls.py  wsgi.py
app/project/settings/: local.py  main.py
docker-compose/: app.yaml  storages.yaml
frontend/: 1.html  about.html  authorization.html  dostavka.html  faq.html  index.html  kondicionery.html  politika-konfidencialnosti.html  profile.html  registration.html  reviews.html  test1.html  test2.html  uslygi.html
(+4 files in other folders)
